--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #map {
   display: block;
-  height: 500px;
+  height: 400px;
   width: 100%;
 }
 Header {
@@ -20,6 +20,9 @@ Header .title {
 Header .subtitle {
   color: white;
   font-size; 3em;
+}
+#dashboard {
+  padding: 20px;
 }
 Footer {
   height: 150px;
